# practice

./: .dockerignore  .env  README.md  docker-compose.yml
.github/workflows/: build-push.yml  cicd.yml  deploy.yml  main.yml  test-backend.yml  test-frontend.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0ce10f2c1b3ea65db1e3b6bb280b70fa09cdeeb6f441a18498a447dd00ddf0c0.json  query-29c8ccace8b2f8cadae61321af1732c2ef3761ccd818d18ae2b5f1463eaebbd8.json
backend/migrations/: 20250224210108_create_users_table.sql  20250402205306_groups.sql  20250402205324_role_assignments.sql  20250402205909_initial_user_admin.sql
backend/src/: lib.rs  main.rs
backend/src/controllers/: about.rs  default.rs  mod.rs  routes.rs  users.rs
backend/src/errors/: mod.rs
backend/src/models/: authentication.rs  mod.rs
backend/src/models/api/: authentication.rs
backend/src/models/database/: db_user.rs  mod.rs
backend/src/repositories/: mod.rs  users.rs
backend/src/services/: mailjet.rs  mod.rs
backend/src/services/auth/: claims_service.rs  mod.rs  password_service.rs  user_service.rs
frontend/: .gitignore  Dockerfile  README.md  angular.json  package.json  proxy.conf.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/models/: auth-types.ts  notifications.ts
frontend/src/app/services/: api.service.ts  (+5 more)
frontend/src/environments/: environment.common.ts  environment.ts
nginx/: nginx.conf
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
(+27 files in other folders)
